[gd_scene load_steps=5 format=3 uid="uid://g1a1swhi0l0y"]

[ext_resource type="Script" path="res://scripts/Chest.gd" id="1_snumr"]
[ext_resource type="Texture2D" uid="uid://m4l8mks6lui7" path="res://assets/sprites/Chest.png" id="2_pqy54"]
[ext_resource type="FontFile" uid="uid://ce33c3yvuo3tf" path="res://assets/fonts/Fonts/m3x6.ttf" id="3_2ghql"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryr2r"]
size = Vector2(18, 15)

[node name="Chest" type="Node2D"]
script = ExtResource("1_snumr")

[node name="ChestSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_pqy54")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ryr2r")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="OpenText" type="RichTextLabel" parent="."]
visible = false
offset_left = -18.0
offset_top = -28.0
offset_right = 22.0
offset_bottom = -14.0
theme_override_fonts/normal_font = ExtResource("3_2ghql")
bbcode_enabled = true
text = "[wave] E: OPEN"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
